--- a/app/src/main/res/layout/cm_device_manager.xml
+++ b/app/src/main/res/layout/cm_device_manager.xml
@@ -32,8 +32,7 @@
 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="解除绑定"
-        android:visibility="gone"
+        android:text="换一个"
         android:layout_marginBottom="56dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
@@ -45,7 +44,7 @@
     <RelativeLayout
 
         android:layout_width="match_parent"
-        android:layout_marginTop="144dp"
+        android:layout_marginTop="184dp"
 
         android:layout_height="286dp">
 
@@ -131,7 +130,7 @@ android:layout_marginLeft="8dp"
                     android:text="固件更新"
                     android:layout_gravity="center"
 
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginLeft="6dp"
                     android:textColor="@color/white"
                     android:textSize="15sp" />
 
