--- a/app/src/main/res/layout/login_phone_view.xml
+++ b/app/src/main/res/layout/login_phone_view.xml
@@ -46,8 +46,8 @@
                     android:layout_height="match_parent"
                     android:maxLength="11"
                     android:cursorVisible="true"
-                    android:inputType="phone|number"
-
+                    android:inputType="number"
+                    android:digits="1234567890"
                     android:background="@color/white_alpha000"
                     android:textColor="@color/black" />
 
@@ -89,7 +89,8 @@
                     android:layout_height="30dp"
                     android:maxLength="6"
                     android:cursorVisible="true"
-                    android:inputType="phone|number"
+                    android:digits="1234567890"
+                    android:inputType="number"
                     android:layout_alignParentBottom="true"
                     android:background="@color/white_alpha000"
                     android:textColor="@color/black" />
@@ -187,12 +188,12 @@
 
                     android:layout_alignParentBottom="true"
                     android:layout_width="wrap_content"
-                    android:layout_gravity="center_vertical"
+                    android:layout_gravity="bottom"
                     android:layout_height="wrap_content"
 
                     android:textOff="女"
                     android:textOn="男"
-                   />
+                    />
 
 
                 <View
