--- a/app/src/main/res/layout/cm_apply_popwindow.xml
+++ b/app/src/main/res/layout/cm_apply_popwindow.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="248dp"
     android:layout_height="154dp"
-    android:background="#00000000"
+    android:background="#99000000"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
@@ -12,8 +12,8 @@
         android:id="@+id/record_line_id"
         android:layout_width="248dp"
         android:layout_height="154dp"
-        android:background="@drawable/cm_rounded_record"
-
+        android:layout_centerInParent="true"
+        android:background="@drawable/rounded_process"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -175,4 +175,4 @@
         android:gravity="center" />
 
 
-</LinearLayout>
+</RelativeLayout>
