--- a/app/src/main/res/layout/cm_device_update.xml
+++ b/app/src/main/res/layout/cm_device_update.xml
@@ -20,6 +20,8 @@
 
     <TextView
 
+        android:id="@+id/tea_os_version"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cha OS 2.1"
