--- a/app/src/main/res/layout/cm_device_update_two.xml
+++ b/app/src/main/res/layout/cm_device_update_two.xml
@@ -32,9 +32,9 @@
     >
     <TextView
 
+            android:id="@+id/tea_os_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OS 2.1"
         android:gravity="center"
         android:layout_alignParentTop="true"
         android:textAlignment="center"
