--- a/app/src/main/res/layout/cm_pc_control_update.xml
+++ b/app/src/main/res/layout/cm_pc_control_update.xml
@@ -31,6 +31,7 @@
             android:layout_weight="1"
             android:background="@color/pc_choose_color"
             android:textSize="15sp"
+            android:maxLength="20"
             android:gravity="center"
             android:layout_gravity="center"
             android:textColor="@color/white"
@@ -167,6 +168,7 @@ android:layout_margin="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="15sp"
+        android:visibility="gone"
         android:layout_margin="20dp"
         android:text="设置"
         android:gravity="center"
@@ -212,7 +214,9 @@ android:layout_margin="15dp"
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="@color/white" />
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <com.handmark.pulltorefresh.library.PullToRefreshListView xmlns:ptr="http://schemas.android.com/apk/res-auto"
         android:id="@+id/listview_design"
         android:layout_width="match_parent"
@@ -220,7 +224,7 @@ android:layout_margin="15dp"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:cacheColorHint="#00000000"
-        android:listSelector="#00000000"
+        android:listSelector="#8858afab"
         android:divider="#00000000"
         android:dividerHeight="0dp"
         android:fadingEdge="none"
@@ -228,6 +232,8 @@ android:layout_margin="15dp"
         android:footerDividersEnabled="false"
         android:headerDividersEnabled="false"
         android:smoothScrollbar="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginBottom="30dp"
         ptr:ptrMode="both"></com.handmark.pulltorefresh.library.PullToRefreshListView>
 
 
@@ -235,13 +241,12 @@ android:layout_margin="15dp"
             android:id="@+id/right_title_finish"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-
+android:layout_alignParentBottom="true"
             android:gravity="center"
             android:textColor="@color/white"
             android:text="完成"
             android:textSize="15sp"
             />
 
-
-
+</RelativeLayout>
 </LinearLayout>
