--- a/app/src/main/res/layout/cm_pc_control_update_add_item.xml
+++ b/app/src/main/res/layout/cm_pc_control_update_add_item.xml
@@ -7,7 +7,9 @@
 
     android:orientation="horizontal"
     >
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="44dp">
 
     <ImageView
 
@@ -26,5 +28,5 @@ android:layout_centerInParent="true"
     android:layout_alignParentBottom="true"
     android:background="@color/white_alpha60"
     />
-
+</RelativeLayout>
 </RelativeLayout>
