--- a/app/src/main/res/layout/cm_tea_main.xml
+++ b/app/src/main/res/layout/cm_tea_main.xml
@@ -60,6 +60,7 @@
 
             <TextView
 
+                android:id="@+id/test_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
@@ -554,6 +555,41 @@ android:layout_marginLeft="107dp"
             />
 
     </LinearLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/bluetooth_rel"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@color/white_alpha60"
+        >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:orientation="vertical"
+            android:layout_centerInParent="true"
+android:gravity="center_horizontal"
+            android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="39dp"
+            android:layout_height="79dp"
+            android:src="@drawable/bluetooth_icon"
+            android:scaleType="fitXY"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="请打开蓝牙"
+            android:layout_marginTop="30dp"
+            android:textSize="17sp"
+            android:textColor="@color/black"
+            />
+        </LinearLayout>
+
+
+    </RelativeLayout>
 
 
 </RelativeLayout>
