--- a/app/src/main/res/layout/one_permission_popwindow.xml
+++ b/app/src/main/res/layout/one_permission_popwindow.xml
@@ -34,7 +34,7 @@ android:textSize="15sp"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_gravity="left"
+            android:layout_gravity="center"
             android:textSize="13sp"
             android:textColor="@color/white_alpha60"
             />
