--- a/app/src/main/res/layout/cm_apply_popwindow.xml
+++ b/app/src/main/res/layout/cm_apply_popwindow.xml
@@ -54,7 +54,7 @@
             android:id="@+id/apply_ready_line"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
+
             android:orientation="vertical">
 
             <TextView
@@ -75,7 +75,7 @@
                 android:layout_marginLeft="37dp"
                 android:layout_marginTop="16dp"
 
-                android:text="- 请确保茶密电量充足"
+                android:text="- 下载期间请放正茶杯并避免插电复位"
                 android:textColor="@color/white_alpha80"
                 android:textSize="12sp" />
 
@@ -88,11 +88,20 @@
                 android:text="- 请确保茶密与手机距离5米内"
                 android:textColor="@color/white_alpha80"
                 android:textSize="12sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
+                android:layout_marginLeft="37dp"
+
+                android:text="- 保持手机页面停留在下载页面"
+                android:textColor="@color/white_alpha80"
+                android:textSize="12sp" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="31dp">
+                android:layout_marginTop="21dp">
 
                 <TextView
                     android:id="@+id/apply_download_begin"
@@ -137,7 +146,9 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="28dp"
                 android:gravity="center"
-                android:text="发送需要3-10分钟，请勿操作手机和茶杯"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:text="l蓝牙发送需要3-10分钟，请保持屏幕停留在本页面"
                 android:textColor="@color/white_alpha80"
                 android:textSize="12sp" />
 
