--- a/app/src/main/res/layout/cm_mine_appsetting.xml
+++ b/app/src/main/res/layout/cm_mine_appsetting.xml
@@ -22,6 +22,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
+            android:visibility="gone"
             android:layout_alignParentTop="true"
             android:background="@color/black"
             />
@@ -229,4 +230,17 @@
             />
 
     </RelativeLayout>
+
+
+    <TextView
+
+        android:id="@+id/clean_data_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+       android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:text="清除缓存"
+        android:textColor="@color/black"
+        android:textSize="17sp" />
+
 </LinearLayout>
