--- a/app/src/main/res/layout/cm_pc_control_update_item.xml
+++ b/app/src/main/res/layout/cm_pc_control_update_item.xml
@@ -49,6 +49,7 @@
         android:layout_width="15dp"
         android:layout_height="15dp"
         android:scaleType="fitXY"
+        android:visibility="invisible"
         android:layout_gravity="center"
         android:src="@drawable/pc_update"
         />
@@ -60,6 +61,7 @@
         android:layout_marginLeft="45dp"
         android:layout_height="15dp"
         android:scaleType="fitXY"
+        android:layout_margin="5dp"
         android:layout_gravity="center"
         android:src="@drawable/pc_delete"
         />
