--- a/app/src/main/res/layout/cm_device_update_two.xml
+++ b/app/src/main/res/layout/cm_device_update_two.xml
@@ -114,9 +114,10 @@
         />
 
         <TextView
+            android:id="@+id/comment_content_id"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="此版本修复了在杯子遇到验证码问题的后才能运行，请重新尝试是否修复该问题"
             android:gravity="left"
 
             android:textColor="@color/white_alpha80"
@@ -126,6 +127,7 @@
 
 
         <LinearLayout
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -153,6 +155,7 @@
                 />
         </LinearLayout>
         <LinearLayout
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
