--- a/app/src/main/res/layout/cm_device_manager.xml
+++ b/app/src/main/res/layout/cm_device_manager.xml
@@ -116,11 +116,11 @@ android:layout_marginLeft="8dp"
                 android:orientation="horizontal"
                 >
                 <ImageView
+                    android:id="@+id/dv_update_img_id"
                     android:layout_width="15dp"
                     android:layout_height="15dp"
                     android:layout_gravity="center"
 
-                    android:src="@drawable/dv_update"
                     />
 
                 <TextView
