--- a/app/src/main/res/layout/fragment_mine_tab.xml
+++ b/app/src/main/res/layout/fragment_mine_tab.xml
@@ -341,27 +341,7 @@
                     android:layout_weight="1"
                     android:layout_height="47dp"
                     >
-                    <LinearLayout
-                        android:id="@+id/mine_msg_line"
 
-                        android:layout_width="18dp"
-                        android:background="@drawable/rounded_unreadmsg"
-                        android:gravity="center"
-                        android:visibility="gone"
-                        android:layout_height="18dp"
-                        android:layout_toEndOf="@+id/imageView"
-                        android:layout_alignParentTop="true"
-                        android:layout_toRightOf="@+id/imageView">
-                        <TextView
-                            android:id="@+id/mine_msg_num_id"
-
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="11sp"
-                            android:textColor="@color/white"
-                            />
-
-                    </LinearLayout>
 
 
 
@@ -388,6 +368,28 @@
 
                         android:textColor="@color/black"
                         android:textSize="12sp" />
+
+                    <LinearLayout
+                        android:id="@+id/mine_msg_line"
+
+                        android:layout_width="12dp"
+                        android:background="@drawable/rounded_unreadmsg"
+                        android:gravity="center"
+                        android:layout_height="12dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginRight="10dp"
+                        android:layout_alignRight="@+id/update_id"
+                        android:layout_alignEnd="@+id/update_id">
+                        <TextView
+                            android:id="@+id/mine_msg_num_id"
+
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="6sp"
+                            android:textColor="@color/white"
+                            android:layout_alignBottom="@+id/mine_msg_line"
+                            android:layout_centerHorizontal="true" />
+                    </LinearLayout>
 
                 </RelativeLayout>
 
