--- a/app/src/main/res/layout/one_permission_popwindow.xml
+++ b/app/src/main/res/layout/one_permission_popwindow.xml
@@ -23,54 +23,56 @@
     android:layout_marginTop="10dp"
     android:layout_gravity="center_horizontal"
 android:textSize="15sp"
-    android:textColor="@color/white"
+    android:textColor="@color/white_alpha80"
     />
 
         <TextView
             android:id="@+id/alert_comment_id"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="主人，您还没有绑定设备，请您前往"
+            android:layout_height="50dp"
             android:layout_marginTop="15dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:gravity="center"
             android:layout_gravity="center"
-            android:textSize="15sp"
-            android:textColor="@color/white_alpha80"
+            android:textSize="13sp"
+            android:textColor="@color/white_alpha60"
             />
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="15dp"
-            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_height="wrap_content"
             >
             <TextView
                 android:id="@+id/change_user_id"
 
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="切换账号"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="30dp"
-                android:textSize="15sp"
-                android:textColor="@color/white"
+                android:text="确认"
+                android:gravity="center"
+                android:textSize="13sp"
+                android:textColor="@color/white_alpha60"
                 />
 
             <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:id="@+id/choose_bind_id"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="绑定设备"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="30dp"
-                android:textSize="15sp"
-                android:textColor="@color/white"
+                android:text="取消"
+                android:gravity="center"
+
+                android:textSize="13sp"
+                android:textColor="@color/white_alpha60"
                 />
 
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
