--- a/BleSensorTag/src/main/res/layout/sensor_device_update_two.xml
+++ b/BleSensorTag/src/main/res/layout/sensor_device_update_two.xml
@@ -115,9 +115,9 @@
                 />
 
             <TextView
+                android:id="@+id/comment_content_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="此版本修复了在杯子遇到验证码问题的后才能运行，请重新尝试是否修复该问题"
                 android:gravity="left"
 
                 android:textColor="#88ffffff"
@@ -127,6 +127,7 @@
 
 
         <LinearLayout
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -154,6 +155,8 @@
                 />
         </LinearLayout>
         <LinearLayout
+            android:visibility="gone"
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
