--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -3,30 +3,66 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <RelativeLayout
         android:id="@+id/welcome_rel_id"
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:background="@color/white"
-        android:layout_height="match_parent">
-    <ImageView
-        android:layout_width="69dp"
-        android:layout_height="91dp"
-        android:src="@drawable/logo"
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
-android:layout_centerInParent="true"
-        android:scaleType="fitXY"
-        />
-</RelativeLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="69dp"
+                android:layout_height="91dp"
+                android:layout_gravity="center_horizontal"
+                android:scaleType="fitXY"
+                android:src="@drawable/logo" />
+
+
+            <ImageView
+                android:layout_width="232dp"
+                android:layout_height="44dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="66dp"
+                android:scaleType="fitXY"
+
+                android:src="@drawable/welcome_sf_icon" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="14dp"
+
+                android:text="每天3杯茶密=5个洋葱=4个苹果=7杯橙汁"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="97dp"
+
+                android:text="趣味泡饮 健康加倍"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+        </LinearLayout>
+    </RelativeLayout>
 
     <RelativeLayout
-        android:visibility="gone"
-
         android:id="@+id/login_rel_id"
 
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
 
         <com.taomake.teabuddy.component.CustomVideoView
@@ -42,19 +78,19 @@ android:layout_centerInParent="true"
             android:layout_marginLeft="26dp"
             android:layout_marginTop="32dp"
             android:background="@drawable/logo" />
+
         <TextView
             android:id="@+id/wx_login_id"
             android:layout_width="match_parent"
             android:layout_height="41dp"
-            android:gravity="center"
-            android:layout_marginLeft="28dp"
-            android:layout_marginBottom="18dp"
-            android:layout_marginRight="28dp"
-            android:textColor="@color/white"
             android:layout_alignParentBottom="true"
+            android:layout_marginBottom="18dp"
+            android:layout_marginLeft="28dp"
+            android:layout_marginRight="28dp"
             android:background="#66000000"
+            android:gravity="center"
             android:text="微信授权登陆"
-            />
+            android:textColor="@color/white" />
 
     </RelativeLayout>
 
