--- a/app/src/main/res/layout/cm_apply_popwindow.xml
+++ b/app/src/main/res/layout/cm_apply_popwindow.xml
@@ -65,7 +65,7 @@
                 android:gravity="center"
                 android:text="茶密已连接"
                 android:textColor="@color/white_alpha80"
-                android:textSize="12sp" />
+                android:textSize="14sp" />
 
 
             <TextView
@@ -112,7 +112,7 @@ android:layout_marginRight="20dp"
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="62dp"
 
-                    android:text="开始下载"
+                    android:text="下载到茶杯"
                     android:textColor="@color/white_alpha80"
                     android:textSize="12sp" />
 
