--- a/app/src/main/res/layout/cm_tea_main.xml
+++ b/app/src/main/res/layout/cm_tea_main.xml
@@ -39,6 +39,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="25dp"
                 android:text="购买"
+                android:visibility="gone"
                 android:textColor="@color/white"
                 android:textSize="18sp" />
 
@@ -77,7 +78,7 @@
                 android:layout_marginTop="7dp"
                 android:gravity="bottom"
                 android:orientation="horizontal"
-                android:visibility="gone">
+                android:visibility="invisible">
 
                 <TextView
 
@@ -91,6 +92,8 @@
                     android:textSize="27sp" />
 
                 <ImageView
+                    android:id="@+id/tea_name_id_back"
+
                     android:layout_width="10dp"
                     android:layout_height="15dp"
                     android:layout_gravity="bottom"
@@ -127,6 +130,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_gravity="center"
                     android:layout_marginBottom="6dp"
+
                     android:scaleType="fitXY"
                    />
 
@@ -160,7 +164,7 @@
                     android:layout_gravity="center"
                     android:layout_marginBottom="12dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/cm_dc_notyet" />
+                    android:src="@drawable/bat_0" />
 
                 <TextView
                     android:id="@+id/dccontrol_id"
@@ -336,7 +340,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp"
             android:textColor="@color/white"
-            android:textSize="17sp" />
+            android:textSize="15sp" />
     </RelativeLayout>
 
 
