--- a/app/src/main/res/layout/one_permission_popwindow.xml
+++ b/app/src/main/res/layout/one_permission_popwindow.xml
@@ -19,7 +19,7 @@
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="温馨提示"
+    android:text="茶密提示"
     android:layout_marginTop="10dp"
     android:layout_gravity="center_horizontal"
 android:textSize="15sp"
