--- a/app/src/main/res/layout/popupwindow_toast.xml
+++ b/app/src/main/res/layout/popupwindow_toast.xml
@@ -34,8 +34,11 @@
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
+             android:layout_marginLeft="10dp"
+             android:layout_marginRight="10dp"
              android:layout_gravity="center_horizontal"
              android:textSize="13sp"
+             android:gravity="center"
              android:textColor="@color/white"
              />
          </LinearLayout>
