--- a/app/src/main/res/layout/cm_function_control.xml
+++ b/app/src/main/res/layout/cm_function_control.xml
@@ -26,10 +26,10 @@
 
     <LinearLayout
         android:id="@+id/shutdown_line"
-        android:layout_below="@+id/gridview"
         android:layout_width="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="56dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
         android:layout_height="wrap_content">
